# chillymillyengine

./: .flake8  .gitignore  .pytest.ini  FAQ.md  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: lint_format_test.yml
chillymillyengine/: __init__.py  config.py
chillymillyengine/logger/: __init__.py  logger.py
chillymillyengine/resource/: __init__.py  paths.py
cme/: __init__.py  color.py  config.py  enums.py  key.py  version.py
cme/camera/: __init__.py
cme/concurrency/: __init__.py  multiprocesses.py  schedule.py  threads.py
cme/font/: __init__.py
cme/gui/: __init__.py  gui.py
cme/localization/: __init__.py  language_handler.py
cme/logger/: __init__.py  logger.py
cme/pathfinding/: __init__.py
cme/resource_/: __init__.py  assets.py  paths.py  saves.py  settings.py
cme/shapes/: __init__.py
cme/sound/: __init__.py  sound.py
cme/sprite/: __init__.py  animator.py  sprite.py
cme/text/: __init__.py  text.py
cme/texture/: __init__.py  texture.py
cme/utils/: __init__.py  utils.py
cme/view/: __init__.py  view.py
cme/window/: __init__.py  window.py
tasks/: format_and_lint.ps1  format_and_lint.sh
tests/: conftest.py
tests/test_font/: test_font.py
tests/test_gui/: test_exports.py  test_uiblinkinglabel.py  test_uifixedsizelabel.py
tests/test_localization/: test_langdict.py
tests/test_logger/: test_logger.py
tests/test_resource_/: test_assets.py  test_paths.py  test_settings.py
tests/test_shapes/: test_exports.py
tests/test_sound/: test_sound.py
tests/test_sprite/: test_animator.py  test_sprite.py
tests/test_texture/: test_exports.py
tests/test_utils/: test_utils.py
tests/test_view/: test_fadingview.py
