[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chilly-milly-engine"
version = "1.5.0"
authors = [{ name = "Dominik Reinartz", email = "dominik.reinartz@proton.me" }]
description = "Game engine for Chilly Milly Games."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arcade @ git+https://github.com/pythonarcade/arcade@development",
    "pyglet>=2.0.14",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
arcade-accelerate = ["arcade-accelerate>=1.0.2"]
dev = [
    "flake8>=7.0.0",
    "isort>=5.13.2",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]
